--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <h1>Welcome to the Premier SURF TRIP MAROC Experience</h1>
     <p>Your ultimate <strong>Travel Surf Morocco</strong> destination – the best <strong>Surf Camp</strong> &amp; <strong>Surf & Travel Camp Maroc</strong> in Imsouane.</p>
-    <a href="booking.html" class="cta-button">Book Your Adventure Now</a>
+    <a href="https://olassurfmorocco.com" class="cta-button">Book Your Adventure Now</a>
   </header>
   
   <!-- About Section -->
@@ -60,12 +60,12 @@
     <article>
       <h3>5 Reasons Why Your Next Adventure Should Be a Surf Trip Maroc</h3>
       <p>Discover why Morocco is becoming the top destination for surf travelers. From the best surf spots to cultural experiences, find out all the details you need for your next adventure.</p>
-      <a href="blog/surf-trip-maroc.html">Read More</a>
+      <a href="https://olassurfmorocco.com">Read More</a>
     </article>
     <article>
       <h3>How to Prepare for a Travel Surf Morocco Experience</h3>
       <p>Tips and tricks on what to pack, safety guidelines, and the ins and outs of our commitment to making your Surf & Travel Camp Maroc a memorable one.</p>
-      <a href="blog/travel-surf-morocco.html">Read More</a>
+      <a href="https://olassurfmorocco.com">Read More</a>
     </article>
   </section>
 
@@ -82,12 +82,12 @@
   <footer>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="https://olassurfmorocco.com">Home</a></li>
+        <li><a href="https://olassurfmorocco.com">About Us</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="accommodation.html">Accommodation</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://olassurfmorocco.coml">Accommodation</a></li>
+        <li><a href="https://olassurfmorocco.com">Blog</a></li>
+        <li><a href="https://olassurfmorocco.com">Contact</a></li>
       </ul>
     </nav>
     <p>&copy; 2025 Surf Camp &amp; Travel Camp Maroc. All rights reserved.</p>
