--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <ul>
         <li><a href="https://olassurfmorocco.com">Home</a></li>
         <li><a href="https://olassurfmorocco.com">About Us</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="https://olassurfmorocco.com">Services</a></li>
         <li><a href="https://olassurfmorocco.coml">Accommodation</a></li>
         <li><a href="https://olassurfmorocco.com">Blog</a></li>
         <li><a href="https://olassurfmorocco.com">Contact</a></li>
