--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>Finding the perfect board to start your surfing journey</p>
     </header>
 
-    <main>
+    <main><a href="https://olassurfmorocco.com">surf camp Imsouane Morocco</a>
         <img src="https://images.pexels.com/photos/6299970/pexels-photo-6299970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Surfer on a beginner-friendly foam board riding a small wave">
 
         <p>Hey there, future wave rider! So you've decided to take the plunge into the magical world of surfing. I still remember my first time paddling out—equal parts terrifying and exhilarating. The ocean has a way of humbling you while simultaneously offering one of life's greatest natural highs.</p>
